--- a/project 2.0 .html
+++ b/project 2.0 .html
@@ -20,7 +20,7 @@
 						<a href="" class="headLink">О компании</a>
 					</div>
 					<div class="headItem">
-						<a href="produce.html" class="headLink">Продукция</a>
+						<a href="produce/produce.html" class="headLink">Продукция</a>
 					</div>
 					<div class="headItem">
 						<a href="" class="headLink">Бренды</a>
