--- a/produce/produce.html
+++ b/produce/produce.html
@@ -17,19 +17,19 @@
 						<a href="../project 2.0 .html" class="headLink">Главная</a>
 					</div>
 					<div class="headItem aboutCompany">
-						<a href="" class="headLink">О компании</a>
+						<a href="../прочие страницы/about company.html" class="headLink">О компании</a>
 					</div>
 					<div class="headItem">
 						<a href="produce.html" class="headLink">Продукция</a>
 					</div>
 					<div class="headItem">
-						<a href="" class="headLink">Бренды</a>
+						<a href="../прочие страницы/brands.html" class="headLink">Бренды</a>
 					</div>
 					<div class="headItem headItem_big">
-						<a href="" class="headLink">Оплата и доставка</a>
+						<a href="../прочие страницы/pay vs delivery.html" class="headLink">Оплата и доставка</a>
 					</div>
 					<div class="headItem">
-						<a href="" class="headLink">Контакты</a>
+						<a href="../прочие страницы/communications.html" class="headLink">Контакты</a>
 					</div>
 				</div>
 			</div>
@@ -243,17 +243,17 @@
 					</div>
 					<div class="footCol footCol1">
 						<div class="colText">О нас</div>
-						<a href="##" class="colLink">О компании</a>
-						<a href="##" class="colLink">Оплата и доставка</a>
+						<a href="../прочие страницы/about company.html" class="colLink">О компании</a>
+						<a href="../прочие страницы/pay vs delivery.html" class="colLink">Оплата и доставка</a>
 					</div>
 					<div class="footCol footCol2">
 						<div class="colText">Каталог</div>
-						<a href="##" class="colLink">Продукция</a>
-						<a href="##" class="colLink">Бренды</a>
+						<a href="produce.html" class="colLink">Продукция</a>
+						<a href="../прочие страницы/brands.html" class="colLink">Бренды</a>
 					</div>
 					<div class="footCol footCol2">
 						<div class="colText">Связаться с нами</div>
-						<a href="##" class="colLink">Контакты</a>
+						<a href="../прочие страницы/communications.html" class="colLink">Контакты</a>
 					</div>
 				</div>
 			</div>
