--- a/project 2.0 .html
+++ b/project 2.0 .html
@@ -14,22 +14,22 @@
 				</div>
 				<div class="header__items">
 					<div class="headItem">
-						<a href="../project 2.0 .html" class="headLink">Главная</a>
+						<a href="project 2.0 .html" class="headLink">Главная</a>
 					</div>
 					<div class="headItem aboutCompany">
-						<a href="" class="headLink">О компании</a>
+						<a href="прочие страницы/about company.html" class="headLink">О компании</a>
 					</div>
 					<div class="headItem">
 						<a href="produce/produce.html" class="headLink">Продукция</a>
 					</div>
 					<div class="headItem">
-						<a href="" class="headLink">Бренды</a>
+						<a href="прочие страницы/brands.html" class="headLink">Бренды</a>
 					</div>
 					<div class="headItem headItem_big">
-						<a href="" class="headLink">Оплата и доставка</a>
+						<a href="прочие страницы/pay vs delivery.html" class="headLink">Оплата и доставка</a>
 					</div>
 					<div class="headItem">
-						<a href="" class="headLink">Контакты</a>
+						<a href="прочие страницы/communications.html" class="headLink">Контакты</a>
 					</div>
 				</div>
 			</div>
@@ -80,7 +80,9 @@
 						</div>
 						<div class="cont1text">
 							<div class="title2">Ознакомьтесь со всем ассортиментом</div>
-							<button class="bigButton" type="submit">Перейти к продукции</button>
+							<a href="produce/produce.html">
+								<button class="bigButton" type="submit">Перейти к продукции</button>
+							</a>
 						</div>
 						<div class="cont1Ikons">
 							<div class="IconsCol IconsCol1">
@@ -205,17 +207,17 @@
 					</div>
 					<div class="footCol footCol1">
 						<div class="colText">О нас</div>
-						<a href="##" class="colLink">О компании</a>
-						<a href="##" class="colLink">Оплата и доставка</a>
+						<a href="прочие страницы/about company.html" class="colLink">О компании</a>
+						<a href="прочие страницы/pay vs delivery.html" class="colLink">Оплата и доставка</a>
 					</div>
 					<div class="footCol footCol2">
 						<div class="colText">Каталог</div>
 						<a href="produce/produce.html" class="colLink">Продукция</a>
-						<a href="##" class="colLink">Бренды</a>
+						<a href="прочие страницы/brands.html" class="colLink">Бренды</a>
 					</div>
 					<div class="footCol footCol2">
 						<div class="colText">Связаться с нами</div>
-						<a href="##" class="colLink">Контакты</a>
+						<a href="прочие страницы/communications.html" class="colLink">Контакты</a>
 					</div>
 				</div>
 			</div>
